--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        h1 {
+            background: linear-gradient(green, white);
+        }
+    </style>
     <title>Hello</title>
 </head>
 <body>
-    Hello
+    <h1></h1>
 </body>
 </html>
